--- a/app/src/main/res/layout/player_fragment.xml
+++ b/app/src/main/res/layout/player_fragment.xml
@@ -14,6 +14,7 @@
         tools:layout_editor_absoluteY="-16dp" />
 
     <LinearLayout
+        android:id="@+id/play_controls"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -59,6 +60,17 @@
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="#FFFFFF" />
+
+    <SeekBar
+        android:id="@+id/threshold_seekBar"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="100dp"
+        android:thumbTint="@color/colorPrimary"
+        android:progressBackgroundTint="@color/colorPrimary"
+        android:progressTint="@color/colorPrimary"/>
 
 
 </RelativeLayout>
