--- a/app/src/main/res/layout/player_fragment.xml
+++ b/app/src/main/res/layout/player_fragment.xml
@@ -5,13 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/player_background">
-
     <com.example.musinity.PianoRollView
         android:id="@+id/piano_roll_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="-16dp" />
+        android:layout_height="match_parent"/>
 
     <LinearLayout
         android:id="@+id/play_controls"
