--- a/app/src/main/res/layout/player_fragment.xml
+++ b/app/src/main/res/layout/player_fragment.xml
@@ -5,11 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/player_background">
+
     <com.example.musinity.PianoRollView
         android:id="@+id/piano_roll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/bottom_nav_height"/>
+        android:layout_marginBottom="@dimen/bottom_nav_height" />
 
     <LinearLayout
         android:id="@+id/play_controls"
@@ -40,10 +41,10 @@
         <ImageView
             android:id="@+id/skip_forward_button"
             android:layout_width="@dimen/skip_dimen"
-            android:tint="@color/colorPrimary"
             android:layout_height="@dimen/skip_dimen"
             android:layout_gravity="center"
             android:layout_weight="1"
+            android:tint="@color/colorPrimary"
             app:srcCompat="@drawable/ic_skip_next" />
     </LinearLayout>
 
@@ -66,9 +67,10 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="100dp"
-        android:thumbTint="@color/colorPrimary"
+        android:clickable="true"
+        android:focusable="true"
         android:progressBackgroundTint="@color/colorPrimary"
-        android:progressTint="@color/colorPrimary"/>
-
+        android:progressTint="@color/colorPrimary"
+        android:thumbTint="@color/colorPrimary" />
 
 </RelativeLayout>
